1. Метод .of [#461820]